--- a/css/course.css
+++ b/css/course.css
@@ -6,6 +6,7 @@
 @import './footer.css';
 @import './course-box.css'; 
 @import './pagination.css';
+@import './helper.css' ;
 
 .Breadcrumb{
     margin-bottom: 2rem;
@@ -88,3 +89,99 @@ text-decoration: none;
     border-radius: 1rem;
 }
 /*finish course-info styles */
+/* start course-boxes styles */
+.course-boxes__box{
+    display: flex;
+    border-radius: 0.5rem;
+    padding: 1.8rem 2rem;
+    box-shadow: 0 5px 30px rgba(70,72,77,0.08);
+    margin: 1rem 0;
+}
+.course-boxes__box-right{
+    display: flex;
+    align-items: center;
+    justify-content:center ;
+}
+.course-boxes__box-right-icon{
+    font-size: 3.5rem;
+    color: var(--primary-color);
+}
+.course-boxes__box-left{
+    display: flex;
+    flex-direction: column;
+    margin-right: 1.5rem;
+
+}
+.course-boxes__box-left-title{
+    font-size: 1.6rem;
+    color: #858c96;
+}
+.course-boxes__box-left-subtitle{
+    font-size: 1.6rem;
+    color: #7e7d7f;
+}
+/* finish course-boxes styles */
+/* start course-progress styles */
+.course-progress{
+    border-radius: 1rem;
+    background-color:#f0f2f7 ;
+    margin:3rem 0 ;
+    padding: 2rem 2rem 1.2rem 2rem;
+}
+.course-progress__header{
+      font-size: 2.5rem;
+      color: #7b868a;
+      margin-bottom: 1.5rem;
+}
+.course-progress__title{
+    margin-right: 1.5rem;
+    color: #7b868a;
+    font-size: 1.5rem;
+    
+
+}
+.course-progress__bar{
+    border-radius: 10rem;
+    height: 1rem;
+
+}
+
+/* finish course-progress styles */
+/* start introduction styles */
+.introduction{
+    padding: 3rem;
+    border-radius: 0.5rem ;
+    box-shadow: 0 0 13px 1px rgba(70, 72, 77, 0.08);
+}
+.introduction__img{
+    margin-top: 3rem;
+    display: block;
+    border-radius: 1rem;
+    width: 100%;
+}
+.introduction__text{
+    margin-top: 2rem;
+    color: #7a7a7a;
+    font-size: 1.5rem;
+}
+.introduction__btns{
+    margin-top: 4rem;
+}
+.introduction__btns-item{
+    color: var(--primary-color);
+    border: 2px solid var(--primary-color);
+    border-radius: 0.5rem;
+    padding: 0.8rem 1.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: bold;
+    
+}
+.introduction__btns-item:hover{
+    color: var(--white-color);
+    background-color: var(--primary-color);
+}
+.introduction__btns{
+    margin-bottom: 2rem;
+}
+/* finish introduction styles */
